Thu Dec  4 21:48:12 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix checks on string lengths to account
	for terminating nul character.  Some whitespace fixups.

Wed Dec  3 17:16:44 1997  Tom Yu  <tlyu@mit.edu>

	* pty_err.et: Add PTY_OPEN_SLAVE_TOOSHORT error code.

	* open_slave.c (pty_open_slave): Check to ensure that the slave
	name is not NULL or zero-length.

Tue Oct 28 13:28:54 1997  Ezra Peisach  <epeisach@.mit.edu>

	* pty-int.h: Do not prototype initialize_pty_error_table as
	        pty-err.h does as well.

Fri Oct 24 09:12:43 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (CFILES): Add $(srcdir).

Wed Oct  1 04:53:30 1997  Tom Yu  <tlyu@mit.edu>

	* configure.in: Default to a long rather than an int for a time_t
	for paranoia reasons.

Tue Jun  3 23:05:07 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* getpty.c (pty_getpty): Remove erroneous space from the HPUX open().

Fri Apr 25 19:14:48 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in: Check for openpty() in -lutil.  It's there on
		FreeBSD and BSDI systems.

Fri Feb 21 18:25:47 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* pty-int.h: No longer prototype error table init function.

Thu Jan 16 18:47:12 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Cause "clean" to dtrt.
	
	* configure.in: Punt spurious call to KRB5_LIB_PARAMS.

Sun Dec 29 21:32:41 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Update to set STLIBOBJS instead of LIBSRCS; also
	clean up a little bit.

Fri Dec 27 17:09:46 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fix to use OBJS.ST rather than ./OBJS.ST.

	* Makefile.in:
	* configure.in: Changes to use new library build system.

Thu Dec  5 22:43:35 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* update_utmp.c (pty_update_utmp): Apply platform specific patch
		so that HPUX works.  (Kludge for 1.0 release) [PR#40]

Fri Nov 22 11:52:52 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in : Make sure time_t is define [203]